<resources>
    <string name="app_name">Speed Leaderboard</string>
    <string name="welcomeMessage">Welcome to
        Speed Leaderboard. Please pick a username and choose a group to compete in.
    </string>
    <string name="username">Username</string>
    <string name="league_name">Group Name</string>
    <string name="register">Register</string>
    <string name="registerError">Names can only be alphanumeric (A–Z, 0–9) and underscores (_)</string>
    <string name="genericError">Something went really wrong! Error: %%</string>
    <string name="registerLoad">Hang on, registering you…</string>
    <string name="networkError">Trouble communicating with the server! Error: %%</string>
    <string name="registered">Successfully registered. Hang on…</string>
    <string name="nameInUse">The username you chose is already taken in this group.</string>
    <string name="loader">Starting app, please wait…</string>
    <string name="wb">
        Hey there, %%!\n\nYou\&#39;re competing in the $$ group.
    </string>
    <string name="loggingIn">Reading data, hang on just a moment…</string>
    <string name="driveButtonLabel">Let\'s drive!</string>
    <string name="leaderboardButtonLabel">Speed leaderboard</string>
    <string name="createTTBtnLabel">Create Time Trial</string>
    <string name="tTrialBtn">View Time Trials</string>
    <string name="stopDriveButtonWarn">Please choose the \"Save results and exit\" button instead.</string>
    <string name="locationPermissionRequired9">The app needs location access to get your street and speed.</string>
    <string name="locationpermission10">The app needs location access \"All the time\" in order to get your street and
        speed.
    </string>
    <string name="bgLocationPermission">The app needs location at all times so it can work while you have other apps
        open.
    </string>
    <string name="grantButton">Allow</string>
    <string name="bgService">Speed Leaderboard Driving Mode</string>
    <string name="bgServiceTxt">You\'re currently in the competition! Drive safe!\nTap to return to the app.\nResults
        won\'t be saved unless you stop the drive in-app.
    </string>
    <string name="newRecord">New Personal Record!</string>
    <string name="newRecordText">You set a new highest speed of %%MPH on\n!!!</string>
    <string name="backgroundCrash">Driving mode was exited because the app was closed. Time trials will be lost, but
        speed records will be saved next time you save &amp; quit in driving mode.
    </string>
    <string name="cacheFail">Something went really wrong. Try clearing the app cache…</string>
    <string name="bgBannerCrash">Service stopped!</string>
    <string name="useNotif">Please use the notification to return to Driving Mode.</string>
    <string name="loadingDrive">Preparing Driving Mode…</string>
    <string name="locPending">Fetching location…</string>
    <string name="roadsDiscovered">New records this session: 0</string>
    <string name="speedMenu">Your speed: $$MPH</string>
    <string name="stopDriving">Save results and exit</string>
    <string name="uploading">Saving…\nPlease stay on this page.</string>
    <string name="bgCat">Background Service</string>
    <string name="recordCat">Personal Best</string>
    <string name="defeatCat">Record Defeated</string>
    <string name="crashCat">Driving Mode Errors</string>
    <string name="newRoadCat">New Roads</string>
    <string name="newRoadHeader">New Road!</string>
    <string name="newRoadTxt">You just drove on $$ for the first time.</string>
    <string name="notSetTxt">Notification Settings</string>
    <string name="title_activity_leaderboard_page">LeaderboardPage</string>
    <string name="uploadETA">About &lt;Calculating&gt; seconds remaining</string>
    <string name="corruptServerMsg">Received corrupt data from the server!</string>
    <string name="allData">See all results</string>
    <string name="lBoardTitle">Leaderboard</string>
    <string name="saved">Saved speed records!</string>
    <string name="startPointDesc">Drive here in time trial mode to start the clock.</string>
    <string name="startPointTitle">Start Point</string>
    <string name="fCPTitle">Future Checkpoint</string>
    <string name="fCPDesc">You\'ll have to pass through here in the time trial.</string>
    <string name="nCPTitle">Next Point</string>
    <string name="nCPDesc">You need to go here next! Put your phone down!</string>
    <string name="finishPointTitle">Finish Point</string>
    <string name="finishPointDesc">Drive here to end the time trial.</string>
    <string name="followBtn">Map follow</string>
    <string name="osmCred">Map data from OpenStreetMap</string>
    <string name="tTrialGo">Start Time Trial</string>
    <string name="tTrialLB">Leaderboard</string>
    <string name="tTrialName">%% by $$</string>
    <string name="getToStart">Get to the starting point to begin</string>
    <string name="pinInfo">Tap a marker to see what it means</string>
    <string name="markerRmn">%%/$$ checkpoints remaining</string>
    <string name="timeElapsed">Time: 0:00</string>
    <string name="notLongTtrial">Your time trial couldn\'t be saved because it needs to have at least 4 markers.
    </string>
    <string name="finishing">Finishing up…</string>
    <string name="savedTTrial">Saved your time trial! Go check it out!</string>
    <string name="savedTTrialRun">You beat your best time! Check the leaderboard!</string>
    <string name="failedTTrialRun">Time trial run failed. Better luck next time!</string>
    <string name="guBtn">Give up…</string>
    <string name="foroforerror">There\'s nothing here!</string>
    <string name="nameTrial">Please name your time trial</string>
    <string name="OK">OK</string>
    <string name="saveFailedBad">Failed to save. Check your connection. Unsaved data was lost…</string>
    <string name="saveFailedCache">Failed to save. Restart the app, return to driving mode and then save and exit
        again.
    </string>
    <string name="sudoButton">Switch users</string>
    <string name="sudoDetail">Switching your user will show the leaderboards and time trials from the selected user.
        Speed records will automatically be saved to all of your users.
    </string>
    <string name="regBtn">Register a new user</string>
</resources>
