<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomePage">
    <TextView
            android:text="@string/loggingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/wbMessage"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textAlignment="center"/>
    <Button
            android:text="@string/leaderboardButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/statsButton"
            app:layout_constraintTop_toBottomOf="@+id/wbMessage"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:enabled="false" android:onClick="seeLeaderboard"/>
    <Button
            android:text="@string/driveButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/driveButton"
            app:layout_constraintTop_toBottomOf="@+id/statsButton"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:enabled="false" android:onClick="driveButton"/>
    <Button
            android:text="@string/notSetTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/notSetBtn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="notSetBtn" app:layout_constraintTop_toBottomOf="@+id/tTrialsBtn"
            android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/createTTBtnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/createTTrialBtn"
            app:layout_constraintTop_toBottomOf="@+id/driveButton"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:enabled="false" android:onClick="createTTrial"/>
    <Button
            android:text="@string/tTrialBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tTrialsBtn"
            app:layout_constraintTop_toBottomOf="@+id/createTTrialBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp" android:enabled="false"
            android:onClick="seeTTrials"/>
</androidx.constraintlayout.widget.ConstraintLayout>