<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DrivePage">

    <TextView
            android:text="@string/loadingDrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/speedText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textAlignment="center"/>
    <TextView
            android:text="@string/locPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/locText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@+id/speedText"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
    <TextView
            android:text="@string/roadsDiscovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/newRoads"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/locText"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/stopDriving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stopDriving"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newRoads" android:layout_marginTop="24dp"
            android:enabled="false" android:onClick="stopButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>