<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/leagueField"
            android:singleLine="true" android:hint="@string/league_name" android:selectAllOnFocus="true"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/usernameField"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="@+id/usernameField"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcomeMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintVertical_bias="0.006" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/welcomeText" android:layout_marginLeft="24dp" android:layout_marginRight="24dp"
            android:layout_marginTop="24dp" android:textAlignment="center"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameField"
            android:singleLine="true" android:hint="@string/username" android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp" android:autofillHints=""/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/regButton"
            app:layout_constraintStart_toStartOf="@+id/leagueField"
            app:layout_constraintTop_toBottomOf="@+id/leagueField" android:layout_marginTop="24dp"
            android:onClick="loginButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>