<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SwitchUserActivity">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/userList"
            android:spinnerMode="dropdown" android:entries="@array/loadingSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" app:layout_constraintTop_toBottomOf="@+id/sudoMsg"
            android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/sudoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/sudoMsg"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textAlignment="center"
            android:gravity="center"/>
    <TextView
            android:text="@string/sudoDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/sudoExpl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUsrBtn" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:gravity="center"/>
    <Button
            android:text="@string/regBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/newUsrBtn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/userList"
            android:onClick="makeNew"/>
</androidx.constraintlayout.widget.ConstraintLayout>